# DoctorFill-Python

./: .env.example  .gitignore  Dockerfile  README.md  doctorfill-latest.json  package.json  pyinstaller.spec  requirements.txt  server.py
.github/workflows/: release.yml
scripts/: build.sh
src/: __init__.py  _version.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/config/: __init__.py  form_registry.py  settings.py  user_config.py
src/core/: __init__.py  template_manager.py  type_converter.py
src/llm/: __init__.py  infomaniak.py  local.py  provider.py  response_parser.py
src/pdf/xfa/: __init__.py  checkbox.py  extract.py  fill.py  inject.py
src/pipeline/: __init__.py  orchestrator.py  report_merger.py
src/rag/: __init__.py  chunker.py  context_builder.py  processor.py
src/templates/: __init__.py  generator.py  loader.py
src/web/: app.py
src/web/static/: index.html
templates/Form_AVS/: Form_AVS.json  Form_AVS.md  Form_AVS_Min.json  Form_AVS_datasets.xml
templates/Form_Cardio/: Form_Cardio.json  Form_Cardio.md  Form_Cardio_Min.json
templates/Form_LAA_ABRG/: Form_LAA_ABRG.json  Form_LAA_ABRG_Min.json
