[package]
name = "doctorfill"
version = "0.1.0"
description = "DoctorFill - Remplissage intelligent de formulaires PDF medicaux"
authors = ["DoctorFill"]
edition = "2021"

[lib]
name = "doctorfill_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
